Fix spacing issue on quick links

--- a/_sass/_quick-links.scss
+++ b/_sass/_quick-links.scss
@@ -17,7 +17,6 @@
     background-image: linear-gradient($color-mint 0, $color-mint 0),
       linear-gradient(transparent calc(100% - 2px), $color-slate 2px);
     border-bottom-color: $color-slate;
-    margin-left: $spacing-sm;
   }
 
   @media (min-width: 480px) {
@@ -41,6 +40,7 @@
       &::after {
         content: '☞';
         font-size: 2rem;
+        position: unset;
         margin-left: $spacing-sm;
       }
     }
@@ -59,6 +59,7 @@
         &::before {
           content: '[ ';
           margin-left: unset;
+          position: unset;
         }
 
         &::after {
